# task-manager-desktop

./: .env.example  .gitignore  .tdd-formatter.json  DATATEST-BUTTON.md  DATATEST-INTEGRATION.md  DATATEST-SNIPPETS.md  INSTALL-UBUNTU.md  Makefile  NOTICE.md  QUICK-START-UBUNTU.txt  README.md  install-desktop.sh  py-review-report.md  pyproject.toml  requirements-dev.txt  requirements.txt  task-manager-desktop.desktop
ai-forge/: py-review-report.md  python-api-report.md  python-api-tasks.md  python-architecture-report.md  python-architecture-tasks.md  python-async-report.md  python-async-tasks.md  python-ci-cd-report.md  python-ci-cd-tasks.md  python-configuration-report.md  python-configuration-tasks.md  python-data-handling-report.md  python-data-handling-tasks.md  python-dependencies-report.md  python-dependencies-tasks.md  python-error-handling-report.md  python-error-handling-tasks.md  python-hardcodes-report.md  python-hardcodes-tasks.md  python-packaging-report.md  python-packaging-tasks.md  python-performance-report.md  python-performance-tasks.md  python-scalability-report.md  python-scalability-tasks.md  python-security-report.md  python-security-tasks.md  python-testing-report.md  python-testing-tasks.md  python-typing-report.md  python-typing-tasks.md  python-web-framework-report.md  python-web-framework-tasks.md
scripts/: bootstrap.sh
task_manager_desktop/: __init__.py  __main__.py  app.py
task_manager_desktop/controllers/: __init__.py  _boundary.py  _protocols.py  change_status_controller.py  create_task_controller.py  delete_task_controller.py  edit_task_controller.py
task_manager_desktop/core/: __init__.py  _time.py  bootstrap.py  cleanup.py  constants.py  cycles.py  db.py  desktop_entry.py  exceptions.py  filters.py  id_gen.py  models.py  sector.py
task_manager_desktop/repositories/: __init__.py  task_repository.py
task_manager_desktop/ui/: __init__.py  _external_link.py  debug_overlay.py  editor_toolbar.py  empty_state.py  external_paste.py  header.py  icons.py  main_window.py  markdown_editor.py  markdown_find.py  markdown_pane.py  markdown_reader.py  markdown_viewer.py  shortcuts.py  shortcuts_controller.py  subtask_pane.py  task_card.py  task_card_placeholder.py  task_list.py  theme.py  theme.qss  toast.py  top_cards_bar.py
tests/: conftest.py  test_task_1_scenarios.py  test_task_2_scenarios.py
tests-tdd/module-0/: INDEX.md  RED-BASELINE.json
tests-tdd/module-1/: INDEX.md  RED-BASELINE.json
tests-tdd/module-2/: INDEX.md  RED-BASELINE.json
tests-tdd/repositories/: test_update_order_indexes.py
tests-tdd/ui/: test_task_list_dnd.py  test_task_list_sectors.py
tests/acceptance/: test_us_004_status_change.py  test_us_005_propagation.py
tests/benchmark/: test_propagation_perf.py
tests/contract/: test_task_repository_update_status.py
tests/contracts/: test_edit_task_controller_contract.py  test_header_bar_contract.py  test_status_segmented_control_contract.py  test_task_card_contract.py  test_task_list_contract.py  test_task_repository_contract.py
tests/core/: test_bootstrap.py  test_cleanup.py  test_cycles.py  test_db.py  test_db_migration_v10.py  test_db_migration_v7.py  test_filters.py  (+8 more)
(+101 files in other folders)
