[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "task-manager-desktop"
version = "0.1.0"
description = "Gerenciador de tarefas desktop — SystemForge module-0-foundations"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Pedro Corgnati", email = "corgnati.pedro@gmail.com" }]
requires-python = ">=3.10"
dependencies = ["PySide6>=6.4"]

[project.scripts]
task-manager = "task_manager_desktop.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["task_manager_desktop*"]

[tool.pytest.ini_options]
testpaths = ["tests", "tests-tdd"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
