[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "task-manager-desktop"
version = "0.1.0"
description = "Gerenciador de tarefas desktop — SystemForge module-0-foundations"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Pedro Corgnati", email = "corgnati.pedro@gmail.com" }]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: OS Independent",
  "Operating System :: POSIX :: Linux",
  "Environment :: X11 Applications :: Qt",
]
dependencies = ["PySide6>=6.4,<7.0"]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pytest-cov>=4",
  "pytest-qt>=4",
  "mypy>=1",
  "ruff>=0.5",
]

[project.scripts]
task-manager = "task_manager_desktop.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["task_manager_desktop*"]

[tool.pytest.ini_options]
testpaths = ["tests", "tests-tdd"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
  "perf: opt-in performance gate (p95/p99 assertions). Requires --run-perf to actually fail.",
  "acceptance: acceptance test mapped to AC-T-xxx in MODULE-USER-STORIES.md.",
]

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
# TASK-4/ST013: zona estrita comeca pelo change_status_controller (alvo da revisao).
# Demais controllers serao migrados em corretivas futuras (risk note TASK-4).
module = "task_manager_desktop.controllers.change_status_controller"
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "task_manager_desktop.controllers._protocols"
disallow_untyped_defs = true
disallow_incomplete_defs = true
